# C-CPP-CMake-Project-Creator

./: CHANGELOG.md  README.md  package.json
Templates/: launch.json  tasks.json
Templates/c/: CMakeLists.txt
Templates/cpp/: CMakeLists.txt
src/: Project.ts  extension.ts  user-query.ts  vscode-ui.ts
